traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:1: error: not found: value n
  n=0
  ^TraversalByColumn:4: error: not found: value n
    n = n+1
    ^